# clausechain

./: .editorconfig  .gitignore  ClauseChain_Championship_GraphRAG_Strategy.md  ClauseChain_Dev_Plan_and_Task_Distribution.md  ClauseChain_Legal_Matching_DoDont.md  ClauseChain_PRD_Application.md  ClauseChain_Round1_Build_Guide.md  ClauseChain_Submission_Answers.md  ClauseChain_Technical_Memo.docx  QUICKSTART.md  build_technical_memo.py  docker-compose.dokploy.yml  docker-compose.yml  setup_database.sh  start.sh  start_backend.sh  ~$auseChain_Technical_Memo.docx
Design/: ClauseChain.html  app.jsx  components.jsx  data.js  index.html  modals.jsx  page-crawl.jsx  page-dashboard.jsx  page-document.jsx  page-extract.jsx  page-harvest.jsx  page-jurisdiction.jsx  page-ledger.jsx  page-map.jsx  page-matrix.jsx  page-trace.jsx  shell.jsx  styles.css
Design2/: app.jsx  components.jsx  data.js  index.html  styles.css  (+2 more)
engine/: .env.example  .gitignore  DECISIONS.md  README.md  pyproject.toml  run.py
engine/configs/: graph.yaml  models.yaml
engine/configs/jurisdictions/: au.yaml  my.yaml  sg.yaml
engine/configs/rdtii/: pillar_6.yaml  pillar_7.yaml
engine/data/: known_index.json  known_index_round2.json  seeds.json
engine/data/gold/: README.md  gold_rows.csv
engine/scripts/: build_known_index.py  eval_vs_master.py  spike_ocr_check.py  spike_providers.py  spike_sg_fetch.py
engine/tests/: test_csv_writer.py  test_graph_store.py  test_known_index.py  test_model_router.py  test_run_dummy.py  test_template_contract.py
engine/tests/fixtures/: OUTPUT_TEMPLATE_31MAY.xlsx
(+215 files in other folders)
