[project]
name = "clausechain-engine"
version = "0.1.0"
description = "ClauseChain Round 1 legal evidence engine skeleton"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
    "pymupdf>=1.24,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
]
crawl = [
    "playwright>=1.45",
]
ocr = [
    "pytesseract>=0.3.10",
    "pillow>=10.0",
]
embed = [
    "sentence-transformers>=3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

